styled fine details and increased padding around form

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 		</form>
 
 		<h3>The Fine Detail</h3>
-		<p>All efforts will be made to publish information in a timely manner. All information submitted will be
+		<p id="fine-detail">All efforts will be made to publish information in a timely manner. All information submitted will be
 			monitored
 			before publication on this website. Final decision on what gets published, including omission of any text,
 			remains
