adjusted values to keep content in header at smaller screen sizes and increased padding of h2's also

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	<section id="about-us">
 		
-		<h2 id="welcome">Interactive News and Events for County Leitrim</h2>
+		<h2 id="spacer" class="welcome">Interactive News and Events for County Leitrim</h2>
 
 		<div id="left-most">
 			<div class="left-most-heading">
@@ -144,7 +144,7 @@
 
 		<article>
 
-			<img src="assets/images/LoughGill2.jpg"
+			<img class="lake" src="assets/images/LoughGill2.jpg"
 				alt="A view of Lough Gill facing County Leitrim from County Sligo side">
 
 			<h3>Water Disruption in Carrick on Shannon</h3>
@@ -221,7 +221,7 @@
 
 		<article>
 
-			<img src="assets/images/streaminwinter.jpg" alt="A view of a stream through frosty bushes">
+			<img class="stream" src="assets/images/streaminwinter.jpg" alt="A view of a stream through frosty bushes">
 
 			<h3>Annual Angling Tournament in Dromahair</h3>
 			<p>The annual angling tournament in Dromahair will take place this year on the August bank holiday weekend,
